[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvidia-sass-lessons"
version = "0.1.0"
description = "Interactive educational platform for learning NVIDIA GPU SASS assembly through hands-on examples"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Yuning Xia", email = "yuninxia@example.com"},
]
maintainers = [
    {name = "Yuning Xia", email = "yuninxia@example.com"},
]
requires-python = ">=3.8"
keywords = [
    "cuda",
    "gpu",
    "sass",
    "assembly",
    "nvidia",
    "education",
    "tutorial",
    "interactive-learning"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development :: Compilers",
    "Topic :: System :: Hardware :: Symmetric Multi-processing",
]

# Core dependencies - intentionally minimal, uses mostly Python stdlib
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
sass-dissect = "sass_lessons.cli:main"
sass-explorer = "sass_lessons.explorer:main"
sass-tutorial = "sass_lessons.tutorial:main"

[project.urls]
Homepage = "https://github.com/yuninxia/nvidia-sass-lessons"
Repository = "https://github.com/yuninxia/nvidia-sass-lessons.git"
Issues = "https://github.com/yuninxia/nvidia-sass-lessons/issues"
Documentation = "https://github.com/yuninxia/nvidia-sass-lessons/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["sass_lessons*"]
exclude = ["build*", "disasm*", "tests*"]

[tool.setuptools.package-data]
sass_lessons = ["*.md", "*.cu", "*.sass"]
"*" = ["*.cu", "*.md", "*.sass"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | disasm
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "disasm",
    ".venv",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__ files are ok

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "build/",
    "disasm/",
]

[tool.coverage.run]
source = ["sass_lessons", "lesson_*"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/build/*",
    "*/disasm/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]